add radial reordering screen