@@ -3,6 +3,7 @@ package de.teamlapen.vampirism.client.gui.screens;
 import com.mojang.blaze3d.systems.RenderSystem;
 import com.mojang.blaze3d.vertex.BufferBuilder;
 import com.mojang.blaze3d.vertex.PoseStack;
+import de.teamlapen.lib.lib.client.gui.screens.radialmenu.IRadialMenuSlot;
 import de.teamlapen.vampirism.VampirismMod;
 import de.teamlapen.vampirism.api.entity.factions.IPlayableFaction;
 import de.teamlapen.vampirism.api.entity.player.IFactionPlayer;
@@ -10,12 +11,14 @@ import de.teamlapen.vampirism.api.entity.player.actions.IAction;
 import de.teamlapen.vampirism.api.entity.player.actions.IActionHandler;
 import de.teamlapen.lib.lib.client.gui.screens.radialmenu.RadialMenu;
 import de.teamlapen.lib.lib.client.gui.screens.radialmenu.RadialMenuSlot;
+import de.teamlapen.vampirism.client.ClientConfigHelper;
 import de.teamlapen.vampirism.client.core.ModKeys;
 import de.teamlapen.vampirism.entity.player.VampirismPlayerAttributes;
 import de.teamlapen.vampirism.network.ServerboundToggleActionPacket;
 import de.teamlapen.vampirism.util.RegUtil;
 import net.minecraft.client.KeyMapping;
 import net.minecraft.client.Minecraft;
+import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 
 import java.util.*;
@@ -26,7 +29,7 @@ public class SelectActionScreen<T extends IFactionPlayer<T>> extends SwitchingRa
     private final IActionHandler<?> actionHandler;
     private final T player;
 
-    private SelectActionScreen(T player, Collection<IAction<?>> actions, KeyMapping keyMapping) {
+    private SelectActionScreen(T player, List<IAction<?>> actions, KeyMapping keyMapping) {
         super(getRadialMenu(actions), keyMapping, SelectMinionTaskScreen::show);
         this.actionHandler = player.getActionHandler();
         this.player = player;
@@ -40,21 +43,20 @@ public class SelectActionScreen<T extends IFactionPlayer<T>> extends SwitchingRa
         IPlayableFaction<?> faction = VampirismPlayerAttributes.get(Minecraft.getInstance().player).faction;
         if (faction != null) {
             faction.getPlayerCapability(Minecraft.getInstance().player).ifPresent(player -> {
-                Collection<IAction<?>> actions = getActions(player);
+                List<IAction<?>> actions = ClientConfigHelper.getActionOrder(player.getFaction().getID()).stream().filter(f -> ((IActionHandler)player.getActionHandler()).isActionUnlocked(f)).collect(Collectors.toList());
                 if (actions.size() > 0) {
                     //noinspection rawtypes
                     Minecraft.getInstance().setScreen(new SelectActionScreen(player, actions, keyMapping));
+                } else {
+                    Minecraft.getInstance().player.displayClientMessage(Component.translatable("text.vampirism.no_actions"), true);
+                    Minecraft.getInstance().setScreen(null);
                 }
             });
         }
     }
 
-    public static Collection<IAction<?>> getActions(IFactionPlayer<?> player) {
-        return player.getActionHandler().getUnlockedActions().stream().filter(a -> a.showInSelectAction(player.getRepresentingPlayer())).collect(Collectors.toList());
-    }
-
-    private static RadialMenu<IAction<?>> getRadialMenu(Collection<IAction<?>> actions) {
-        List<RadialMenuSlot<IAction<?>>> parts = actions.stream().map(a -> new RadialMenuSlot<IAction<?>>(a.getName().getString(), a, Collections.emptyList())).toList();
+    private static RadialMenu<IAction<?>> getRadialMenu(List<IAction<?>> actions) {
+        List<IRadialMenuSlot<IAction<?>>> parts = actions.stream().map(a -> (IRadialMenuSlot<IAction<?>>)new RadialMenuSlot<IAction<?>>(a.getName(), a, Collections.emptyList())).toList();
         return new RadialMenu<>((i) -> {
             VampirismMod.dispatcher.sendToServer(ServerboundToggleActionPacket.createFromRaytrace(RegUtil.id(parts.get(i).primarySlotIcon()), Minecraft.getInstance().hitResult));
         }, parts , SelectActionScreen::drawActionPart,0);
@@ -68,7 +70,7 @@ public class SelectActionScreen<T extends IFactionPlayer<T>> extends SwitchingRa
     }
 
     @Override
-    public void drawSlice(RadialMenuSlot<IAction<?>> slot, boolean highlighted, BufferBuilder buffer, float x, float y, float z, float radiusIn, float radiusOut, float startAngle, float endAngle, int r, int g, int b, int a) {
+    public void drawSlice(IRadialMenuSlot<IAction<?>> slot, boolean highlighted, BufferBuilder buffer, float x, float y, float z, float radiusIn, float radiusOut, float startAngle, float endAngle, int r, int g, int b, int a) {
         float actionPercentage = actionHandler.getPercentageForAction((IAction) slot.primarySlotIcon());
         if (((IAction<T>)slot.primarySlotIcon()).canUse(this.player) != IAction.PERM.ALLOWED) {
             actionPercentage = -1;
